snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.jar.sha1
61fdea199c424e34e4aa3d3cb1c20b7d22cd401f